<resources>
  <string name="app_name">Myst Academy</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="title_profile">Profile</string>

  <string name="title_username">Username</string>
  <string name="title_password">Password</string>
  <string name="action_login_facebook">Facebook Login</string>
  <string name="action_login">Login</string>
  <string name="error_login_username_empty">Username must not be empty</string>
  <string name="error_login_password_empty">Password must not be empty</string>
  <string name="error_login_failed">Login failed, please check your credentials</string>


</resources>
