<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    >

  <ImageView
      android:id="@+id/login_lovo_iv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toTopOf="@+id/login_userName_et"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed"
      app:srcCompat="@mipmap/ic_launcher_foreground"
      />

  <EditText
      android:id="@+id/login_userName_et"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="24dp"
      android:backgroundTint="@android:color/white"
      android:ems="10"
      android:hint="@string/title_username"
      android:inputType="textPersonName"
      android:textColor="@android:color/white"
      android:textColorHint="@android:color/darker_gray"
      app:layout_constraintBottom_toTopOf="@+id/login_password_et"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login_lovo_iv"
      />
  <EditText
      android:id="@+id/login_password_et"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="8dp"
      android:backgroundTint="@android:color/white"
      android:ems="10"
      android:hint="@string/title_password"
      android:inputType="textPassword"
      android:textColor="@android:color/white"
      android:textColorHint="@android:color/darker_gray"
      app:layout_constraintBottom_toTopOf="@+id/login_b"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login_userName_et"
      />
  <Button
      android:id="@+id/login_facebook_b"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="8dp"
      android:background="@android:color/background_light"
      android:text="@string/action_login_facebook"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login_b"
      />

  <Button
      android:id="@+id/login_b"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="24dp"
      android:background="@color/colorAccent"
      android:text="@string/action_login"
      android:textColor="@android:color/white"
      app:layout_constraintBottom_toTopOf="@+id/login_facebook_b"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login_password_et"
      />
  <android.support.constraint.Group
      android:id="@+id/login_group"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      app:constraint_referenced_ids="login_userName_et,login_b,login_facebook_b,login_password_et"
      />


</android.support.constraint.ConstraintLayout>