<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorPrimary"
    >

  <android.support.v7.widget.AppCompatImageView
      android:id="@+id/login_logo_iv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:tint="@color/colorTextNegative"
      android:visibility="visible"
      app:layout_constraintBottom_toTopOf="@+id/splash_divider"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed"
      app:srcCompat="@mipmap/ic_launcher_foreground"
      />

  <android.support.design.widget.TextInputLayout
      android:id="@+id/login_userName_til"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="24dp"
      android:visibility="visible"
      app:errorEnabled="false"
      app:hintEnabled="false"
      app:layout_constraintBottom_toTopOf="@+id/login_password_til"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/splash_title_tv"
      >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/login_userName_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/title_username"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/login_password_til"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="8dp"
      android:visibility="visible"
      app:errorEnabled="false"
      app:hintEnabled="false"
      app:layout_constraintBottom_toTopOf="@+id/login_b"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login_userName_til"
      >

    <android.support.design.widget.TextInputEditText
        android:id="@+id/login_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/title_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        />
  </android.support.design.widget.TextInputLayout>

  <Button
      android:id="@+id/login_facebook_b"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="8dp"
      android:background="@android:color/background_light"
      android:text="@string/action_login_facebook"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login_b"
      />

  <Button
      android:id="@+id/login_b"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="24dp"
      android:background="@color/colorAccent"
      android:text="@string/action_login"
      android:textColor="@android:color/white"
      app:layout_constraintBottom_toTopOf="@+id/login_facebook_b"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login_password_til"
      />
  <android.support.constraint.Group
      android:id="@+id/login_group"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      app:constraint_referenced_ids="login_userName_til,login_b,login_facebook_b,login_password_til"
      app:layout_constraintBottom_toTopOf="parent"
      app:layout_constraintEnd_toStartOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <View
      android:id="@+id/splash_divider"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_marginBottom="24dp"
      android:layout_marginLeft="50dp"
      android:layout_marginRight="50dp"
      android:background="@android:color/white"
      android:visibility="visible"
      app:layout_constraintBottom_toTopOf="@+id/splash_title_tv"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login_logo_iv"
      />


  <TextView
      android:id="@+id/splash_title_tv"
      android:layout_width="wrap_content"
      android:layout_height="32dp"
      android:fontFamily="sans-serif"
      android:text="@string/app_name"
      android:textAllCaps="true"
      android:textColor="@android:color/white"
      android:textSize="20sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/login_userName_til"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/splash_divider"
      app:layout_constraintVertical_bias="0.076"
      />

</android.support.constraint.ConstraintLayout>